--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -1,13 +1,16 @@
 version: "3"
 services:
+  nginx:
+    image: nginx:stable-alpine
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
   node-server-container:
     build: .
     env_file: 
       - .env
-    ports:
-      - 3000:3000
     depends_on:
       - mongo-db
+  
   mongo-db:
     volumes:
       - mongo-db:/data/db:rw
@@ -15,5 +18,9 @@ services:
     env_file: 
       - .env
     restart: always
+
+  redis-store:
+    image: redis
+
 volumes:
   mongo-db:
