--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.28.2",
+    "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.12.15"
+    "express-session": "^1.17.2",
+    "mongoose": "^5.12.15",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
